syntax = "proto3";

option go_package = "./pb";

service SessionService {
    rpc GetBook(GetBookRequest) returns (GetBookResponse);
    rpc GetAllBooks(GetAllBooksRequest) returns (stream GetAllBooksResponse);
    rpc PostBook(PostBookRequest) returns (PostBookResponse);
    rpc DeleteBook(DeleteBookRequest) returns (DeleteBookResponse);
    rpc UpdateBook(UpdateBookRequest) returns (UpdateBookResponse);
}

message Book {
    string id = 1;
    string name = 2;
    string author = 3;
    string isbn = 4;
    string publisher = 5;
    string genre = 6;
    int32 year = 7;
    int32 pages = 8;
}

message GetBookRequest {
    string id = 1;
}

message GetBookResponse {
    Book book = 1;
}

message GetAllBooksRequest {}

message GetAllBooksResponse {
    Book book = 1;
}

message PostBookRequest {
    Book book = 1;
}

message PostBookResponse {
    string result = 1;
}

message DeleteBookRequest {
    string id = 1;
}

message DeleteBookResponse {
    string result = 1;
}

message UpdateBookRequest {
    Book book = 1;
}

message UpdateBookResponse {
    string result = 1;
}